--- a/package.json
+++ b/package.json
@@ -17,7 +17,16 @@
 	},
 	"homepage": "https://github.com/RayanMasri/noor-chess#readme",
 	"dependencies": {
+		"babel-loader": "^9.1.2",
+		"chess.js": "^1.0.0-beta.5",
 		"express": "^4.18.2",
-		"socket.io": "^4.6.1"
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.11.1",
+		"socket.io": "^4.6.1",
+		"supervisor": "^0.12.0",
+		"webpack": "^5.82.1",
+		"webpack-dev-middleware": "^6.1.0",
+		"webpack-hot-middleware": "^2.25.3"
 	}
 }
