--- a/package.json
+++ b/package.json
@@ -1,9 +1,36 @@
 {
-	"name": "noor-chess",
-	"version": "1.0.0",
-	"description": "",
-	"main": "app.js",
+	"name": "client",
+	"version": "0.1.0",
 	"private": true,
+	"dependencies": {
+		"@emotion/react": "^11.11.0",
+		"@emotion/styled": "^11.11.0",
+		"@mui/icons-material": "^5.11.16",
+		"@mui/material": "^5.13.1",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13.5.0",
+		"chess.js": "^1.0.0-beta.6",
+		"cross-env": "^7.0.3",
+		"express": "~4.16.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.11.2",
+		"react-scripts": "5.0.1",
+		"sass": "^1.62.1",
+		"socket.io": "^4.6.1",
+		"socket.io-client": "^4.6.1",
+		"uuid": "^9.0.0",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"dev": "cross-env NODE_ENV=development concurrently --kill-others \"npm start\" \"nodemon app.js\"",
+		"server": "cross-env NODE_ENV=production node app.js"
+	},
 	"eslintConfig": {
 		"extends": [
 			"react-app",
@@ -21,35 +48,5 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"dependencies": {
-		"babel-loader": "^9.1.2",
-		"chess.js": "^1.0.0-beta.5",
-		"express": "^4.18.2",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.11.1",
-		"socket.io": "^4.6.1",
-		"supervisor": "^0.12.0",
-		"webpack": "^5.82.1",
-		"webpack-dev-middleware": "^6.1.0",
-		"webpack-hot-middleware": "^2.25.3",
-		"@emotion/react": "^11.11.0",
-		"@emotion/styled": "^11.11.0",
-		"@mui/icons-material": "^5.11.16",
-		"@mui/material": "^5.13.0",
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^13.5.0",
-		"react-scripts": "5.0.1",
-		"socket.io-client": "^4.6.1",
-		"web-vitals": "^2.1.4",
-		"node-sass": "^7.0.3"
 	}
 }
