--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"chess.js": "^1.0.0-beta.6",
 		"cross-env": "^7.0.3",
 		"express": "~4.16.1",
+		"moment": "^2.29.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.11.2",
