--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"calculate-text-width": "^0.0.3",
 		"chess.js": "^1.0.0-beta.6",
 		"cross-env": "^7.0.3",
 		"express": "~4.16.1",
