--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"moment": "^2.29.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-media-hook": "^0.5.0",
 		"react-router-dom": "^6.11.2",
 		"react-scripts": "5.0.1",
 		"sass": "^1.62.1",
