--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"body-parser": "^1.20.2",
 		"calculate-text-width": "^0.0.3",
 		"chess.js": "^1.0.0-beta.6",
 		"cross-env": "^7.0.3",
 		"express": "~4.16.1",
 		"moment": "^2.29.4",
+		"pg": "^8.11.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-media-hook": "^0.5.0",
